2-add-two-numbers.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"*.txt": "plaintext",
 		"vector": "cpp",
-		"unordered_map": "cpp"
+		"unordered_map": "cpp",
+		"iostream": "cpp",
+		"functional": "cpp"
 	}
 }
