--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,12 @@
 		"typeindex": "cpp",
 		"typeinfo": "cpp",
 		"valarray": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"strstream": "cpp",
+		"barrier": "cpp",
+		"source_location": "cpp",
+		"latch": "cpp",
+		"semaphore": "cpp",
+		"syncstream": "cpp"
 	}
 }
